fix: github url and uncomment clock script

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </div>
 
     <div class="card border-rounded-b-0 text-center">
-      <a href="https://github.com/vandemonica" class="hover:text-secondary">Back to repository page</a>
+      <a href="https://vandemonica.github.io/discord-timestamp" class="hover:text-secondary">Back to repository page</a>
     </div>
   </div>
 </body>
